# Leviathan

./: .env.example  .gitignore  CITATION.cff  ETHICS.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml  paper.yml
backend/: Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  services.py
backend/data/: example_opinions.jsonl
backend/scripts/: build_embeddings.py  load_example_dataset.py  (+1 more)
corpus/: Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
corpus/data/sample_opinions/: marsh_asylum.json  marsh_asylum.txt  okonkwo_suppress.json  okonkwo_suppress.txt
corpus/levcorpus/: __init__.py  cli.py  config.py  db.py  pipeline.py  schema.py
corpus/levcorpus/annotate/: __init__.py  annotators.py
corpus/levcorpus/collect/: __init__.py  courtlistener.py  public_domain.py
corpus/levcorpus/embed/: __init__.py  encoder.py
corpus/levcorpus/export/: __init__.py  writers.py
corpus/levcorpus/extract/: __init__.py  segmenter.py  structured.py
corpus/levcorpus/versioning/: __init__.py  registry.py
corpus/schemas/: dataset_v1.schema.json
corpus/tests/: test_schema_export.py
frontend/: package.json
frontend/app/: page.tsx  (+2 more)
graph/: Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
landing/: index.html
paper/: Makefile  README.md  REPRODUCE.md  main.tex  references.bib
scotus/: Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
(+111 files in other folders)
